# moodle-coderunner-docker

./: .gitignore  README.md  docker-compose.yml  gitclone.sh
ChatRunner/: README.md  chatgpt-orig.py  chatgpt.py
ChatRunner/ChatRunner/: Test.py  __init__.py  __main__.py  chatrunner.py  testprogram.py.txt
ChatRunner/Example/: naiveanswer.md  problem.md
Example/: question.md
db/: Dockerfile
jobe/: Dockerfile
jobe/ChatRunner/: LICENSE.txt  chatgpt.py  chatgpttest.sh  ollamatest.sh  pyproject.toml
jobe/ChatRunner/ChatRunner/: chatrunner.py  legacy.py  prompt.md  testprogram.py.txt
jobe/ChatRunner/Example/: literature.json
moodle-config/: config.php
moodle2docker/: Dockerfile  README.md  crontab
