[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ChatRunner"
version = "0.1.0"
authors = [
  { name='Hans Georg Schaathun', email="hasc@ntnu.no" },
  { name='Jonas Julius Harag' },
]
description = 'Feedback from Large Language Models in Moodle'
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
license = "GPL-3.0"
license-files = ["LICENSE.txt"]
keywords=[ 'elearning', 'artifical intelligence', 'large language models', 'automatedassessment' ]

[project.urls]
Homepage = "N/A"
Issues = "N/A"

[tool.hatch.build.targets.wheel]
packages = [ "ChatRunner" ]

